[gd_scene load_steps=10 format=2]

[ext_resource path="res://Retrophile Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Menues/AwardCeremony/Award_Ceremony.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Menues/Menu_Background.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Menues/Buttons/Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/TransitionMask.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
extra_spacing_top = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
resource_name = "wiggle"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/1st_place:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 0.535887, 2.07053, 0.420448, 2.54912 ),
"update": 0,
"values": [ 0.0, -5.0, 0.0, 5.0 ]
}

[node name="Award_Ceremony" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" parent="." instance=ExtResource( 3 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="headline" type="Label" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "And the winner is..."
align = 1
valign = 1

[node name="1st_place" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 1024.0
margin_bottom = 247.0
rect_rotation = -4.93005
rect_pivot_offset = Vector2( 512, 58 )

[node name="name" type="Label" parent="VBoxContainer/1st_place"]
margin_right = 1024.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "Player1"
align = 1
valign = 1

[node name="wins" type="Label" parent="VBoxContainer/1st_place"]
margin_top = 84.0
margin_right = 1024.0
margin_bottom = 117.0
custom_fonts/font = SubResource( 2 )
text = "4 Wins"
align = 1
valign = 1

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_top = 297.0
margin_right = 1024.0
margin_bottom = 297.0

[node name="ranks" type="VBoxContainer" parent="VBoxContainer/CenterContainer"]
margin_left = 512.0
margin_right = 512.0
custom_constants/separation = 50

[node name="1" type="HBoxContainer" parent="VBoxContainer/CenterContainer/ranks"]
visible = false
margin_right = 358.0
margin_bottom = 33.0
custom_constants/separation = 50

[node name="place" type="Label" parent="VBoxContainer/CenterContainer/ranks/1"]
margin_right = 40.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 3 )
text = "2."

[node name="name" type="Label" parent="VBoxContainer/CenterContainer/ranks/1"]
margin_left = 90.0
margin_right = 220.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Player 2"

[node name="wins" type="Label" parent="VBoxContainer/CenterContainer/ranks/1"]
margin_left = 270.0
margin_right = 358.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "3 Wins"

[node name="2" type="HBoxContainer" parent="VBoxContainer/CenterContainer/ranks"]
visible = false
margin_top = 83.0
margin_right = 358.0
margin_bottom = 116.0
custom_constants/separation = 50

[node name="place" type="Label" parent="VBoxContainer/CenterContainer/ranks/2"]
margin_right = 40.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 3 )
text = "3."

[node name="name" type="Label" parent="VBoxContainer/CenterContainer/ranks/2"]
margin_left = 90.0
margin_right = 220.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Player 2"

[node name="wins" type="Label" parent="VBoxContainer/CenterContainer/ranks/2"]
margin_left = 270.0
margin_right = 358.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "3 Wins"

[node name="3" type="HBoxContainer" parent="VBoxContainer/CenterContainer/ranks"]
visible = false
margin_right = 358.0
margin_bottom = 33.0
custom_constants/separation = 50

[node name="place" type="Label" parent="VBoxContainer/CenterContainer/ranks/3"]
margin_right = 40.0
margin_bottom = 33.0
rect_min_size = Vector2( 40, 0 )
custom_fonts/font = SubResource( 3 )
text = "4."

[node name="name" type="Label" parent="VBoxContainer/CenterContainer/ranks/3"]
margin_left = 90.0
margin_right = 220.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "Player 2"

[node name="wins" type="Label" parent="VBoxContainer/CenterContainer/ranks/3"]
margin_left = 270.0
margin_right = 358.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 3 )
text = "3 Wins"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="CenterContainer" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 510.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Main_Menu" parent="VBoxContainer/HBoxContainer/CenterContainer" instance=ExtResource( 4 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.0
margin_top = -25.0
margin_right = 75.0
margin_bottom = 25.0

[node name="Label" parent="VBoxContainer/HBoxContainer/CenterContainer/Main_Menu" index="0"]
text = "Main Menu"

[node name="CenterContainer2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 514.0
margin_right = 1024.0
margin_bottom = 253.0
size_flags_horizontal = 3

[node name="Play_Again" parent="VBoxContainer/HBoxContainer/CenterContainer2" instance=ExtResource( 4 )]
anchor_left = 0.345679
anchor_top = 0.39083
anchor_right = 0.654321
anchor_bottom = 0.60917
margin_left = 0.0
margin_right = 0.0
margin_bottom = 0.0

[node name="Label" parent="VBoxContainer/HBoxContainer/CenterContainer2/Play_Again" index="0"]
text = "Play Again"

[node name="TransitionMask" parent="." instance=ExtResource( 5 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/wiggle = SubResource( 4 )
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer/Main_Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/CenterContainer2/Play_Again" to="." method="_on_Play_Again_pressed"]

[editable path="VBoxContainer/HBoxContainer/CenterContainer/Main_Menu"]

[editable path="VBoxContainer/HBoxContainer/CenterContainer2/Play_Again"]
